kubernetes/staeding/matrix/conduit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conduit
  namespace: staeding-matrix
  labels:
    app: conduit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conduit
  template:
    metadata:
      labels:
        app: conduit
    spec:
      securityContext:
        fsGroup: 200
      containers:
        - name: conduit
          image: matrixconduit/matrix-conduit:v0.10.13
          securityContext:
            runAsUser: 200
            runAsGroup: 200
          ports:
            - containerPort: 8448
          volumeMounts:
            - name: conduit-db
              mountPath: /var/lib/matrix-conduit/
      volumes:
        - name: conduit-db
          persistentVolumeClaim:
            claimName: conduit-db-pvc
