kubernetes/staeding/matrix/conduit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conduit
  namespace: staeding-matrix
spec:
  type: ClusterIP
  selector:
    app: conduit
  ports:
    - port: 8448
      targetPort: 8448
