kubernetes/staeding/matrix/well-known.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: well-known
  namespace: staeding-matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: well-known
  template:
    metadata:
      labels:
        app: well-known
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: well-known
              mountPath: /usr/share/nginx/html/.well-known/matrix
      volumes:
        - name: well-known
          configMap:
            name: well-known
            items:
              - key: matrix.server
                path: server
              - key: matrix.client
                path: client
---
apiVersion: v1
kind: Service
metadata:
  name: well-known
  namespace: staeding-matrix
spec:
  clusterIP: None
  selector:
    app: well-known
  ports:
    - port: 80
      targetPort: 80
